[project]
name = "aws-infra-graph"
version = "0.1.0"
description = "AWS infrastructure graph builder CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "typer[all]",
    "pydantic"
]

[project.scripts]
aws-infra-graph = "aws_infra_graph.cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
